Time until 4:20 working, snoop picture added
Time to 4:20 works but needs to be fixed for SDK 3.0. Snoop picture is there, just needs implementing.

--- a/appinfo.json
+++ b/appinfo.json
@@ -7,7 +7,13 @@
     "longName": "Snoop Twenty",
     "projectType": "native",
     "resources": {
-        "media": []
+        "media": [
+            {
+                "file": "images/605108-snoopdogg_wideweb__470x338_0 - Copy.png",
+                "name": "SNOOP",
+                "type": "png"
+            }
+        ]
     },
     "sdkVersion": "2",
     "shortName": "Snoop Twenty",
