Image functionality is fully working
Ready for release.
TODO: add date, make a full day of snoop on 4/20

--- a/appinfo.json
+++ b/appinfo.json
@@ -9,7 +9,7 @@
     "resources": {
         "media": [
             {
-                "file": "images/605108-snoopdogg_wideweb__470x338_0 - Copy.png",
+                "file": "images/preview.png",
                 "name": "SNOOP",
                 "type": "png"
             }
